--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 clap = {version = "4.4.13", features = ["derive"]}
 noodles = { version = "*", features = ["bgzf"] }
+byteorder = "1.5"
