--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 clap = {version = "4.4.13", features = ["derive"]}
 noodles = { version = "*", features = ["bgzf"] }
 byteorder = "1.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
