--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ noodles = { version = "*", features = ["bgzf"] }
 byteorder = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+log = "0.4.20"
